member-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: member-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: membermanagement
spec:
  hosts:
  - "*"
  gateways:
  - member-gateway
  http:
  - match:
    - uri:
        prefix: /swagger/
    route:
    - destination:
        host: membermanagement
        port:
          number: 80
---
